--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/global.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Fruit Hunter</title>
 </head>
 <body>
+    <div class="fruit-hunter-anime"></div>
     <div class="main-div">
         <div class="game-name"><span>Fruit</span> Hunter</div>
         <div class="action-buttons">
