time feature added

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="action-buttons">
             <button onclick="location.replace('game')">
                 Solo
-                <img src="./img/versus.png" alt="">
+                <img src="./assets/img/versus.png" alt="">
             </button>
             <button onclick="location.replace('party')">
                 Multiplayer
-                <img src="./img/earth-web.png" alt="">
+                <img src="./assets/img/earth-web.png" alt="">
             </button>
         </div>
     </div>
